bugfix: hub: post preview card: stretch image to 100% width

--- a/projects/charon/src/app/hub/components/hub-post-preview-card/hub-post-preview-card.component.scss
+++ b/projects/charon/src/app/hub/components/hub-post-preview-card/hub-post-preview-card.component.scss
@@ -22,6 +22,10 @@ $hub-post-preview-card--padding-horizontal: 24px;
   margin: (-$hub-post-preview-card--padding-vertical) (-$hub-post-preview-card--padding-horizontal) 0;
 }
 
+.hub-post-preview-card__image {
+  width: 100%;
+}
+
 .hub-post-preview-card__content {
   @include pre-clamp();
 
